--- a/content/modules/15-sets-2/prep.qmd
+++ b/content/modules/15-sets-2/prep.qmd
@@ -15,16 +15,25 @@ For the warmup, it's enough to review last time's reading, with special focus on
 - [DMOI 0.3](https://discrete.openmathbooks.org/dmoi3/sec_intro-sets.html) 
 
  
-# Warmup Problems (~30 mins) 
+# Warmup Problems (~40 mins) 
 
 *Please complete these problems "by hand," without typing. Pencil/pen and paper is best practice for the quiz, but using a stylus with a tablet is also fine. Then, scan/photograph or otherwise produce an image of your solutions and upload them to Canvas.*
 
-## Problem 1 
+## Problem 1
+
+{{< include ../../../content/problems/sets/element-method-2.qmd >}}
+
+**Hint**: Recall that your proof should begin with the phrase "Let $x\in A$" and end with a phrase similar to "Therefore, $x \in B$." 
+
+**Hint**: You may find it helpful to recall the following property of logarithms. For any $a > 0$ and $b \in \mathbb{R}$, $\log_2a^b = b\log_2a$.  
+
+
+## Problem 2 
 
 (*DMOI 0.3.24*)
 
 {{< include ../../../content/problems/sets/dmoi-0-3-24.qmd >}}
 
-## Problem 2
+## Problem 3
 
 {{< include ../../../content/problems/sets/cards-1.qmd >}}   
