--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -258,7 +258,7 @@ Warmups are here to help you <span style="color:#7030a0">**remember**</span> and
 
 ::: {.callout-tip}
 
-Warmups are due by 8:30am on the day of class. Warmups are never accepted late and there are no extensions. However, [you can miss up to three warmups](#assessment-of-warmups) without any impact on your grade. 
+Warmups are due by 8:30am on the day of class. Warmups are never accepted late and there are no extensions. However, [you can miss up to ~~three~~ five warmups](#assessment-of-warmups) without any impact on your grade. 
 
 :::
 
@@ -357,16 +357,16 @@ If you fully meet the requirements for the **C** tier and meet the requirements 
 
 #### Assessment of Warmups
 
-You can miss **at most three** warmups without penalty. After the first three missing warmups, your grade will lower by **1/3 of a letter grade for every two missing warmups**. For example, an **A** would become an **A-**, a **B+** would become a **B**, a **B-** would become a **C+**, etc. 
+You can miss **at most ~~three~~ five** warmups without penalty. After the first three missing warmups, your grade will lower by **1/3 of a letter grade for every two missing warmups**. For example, an **A** would become an **A-**, a **B+** would become a **B**, a **B-** would become a **C+**, etc. 
 
 ::: {.aside}
 
 In more detail, the penalties are: 
 
-- 0-3 missing warmups: -0
-- 4-5 missing warmups: -1/3
-- 6-7 missing warmups: -2/3
-- 8-9 missing warmups: -1 
+- 0-5 missing warmups: -0
+- 6-7 missing warmups: -1/3
+- 8-9 missing warmups: -2/3
+- 10-11 missing warmups: -1 
 - etc. 
 :::
 
@@ -375,7 +375,7 @@ In more detail, the penalties are:
 
 ### Warmups
 
-Extensions are never given on warmups unless under guidance from the DRC. Remember that you can miss up to 3 warmups without any impact on your final grade in the course. 
+Extensions are never given on warmups unless under guidance from the DRC. Remember that you can miss up to ~~three~~ five warmups without any impact on your final grade in the course. 
 
 ### Labs
 
@@ -432,9 +432,9 @@ You deserve a learning environment free from gender-based discrimination, sexual
 
 ## Masks Are Required
 
-In alignment with [the policy](pages/mask-policy.qmd) of the Department of Computer Science, **you are required to wear masks during scheduled class periods,** unless you have a documented health reason not to wear one. I encourage but do not require you to wear masks during Student Hours and Peer Help sessions. 
+In alignment with [the policy](pages/mask-policy.qmd) of the Department of Computer Science, **you are required to wear masks during scheduled class periods during the first two weeks** unless you have a documented health reason not to wear one. I encourage but do not require you to wear masks during Student Hours and Peer Help sessions. 
 
-During the first three weeks of class, I will stock masks that I will offer you in case you forget yours. After the first three weeks of class, you will be responsible for bringing your own masks. If you arrive in class without one, I'll ask you to leave class and come back once you have obtained a mask. 
+During the first week of class, I will stock masks that I will offer you in case you forget yours. After the first week of class, you will be responsible for bringing your own masks. If you arrive in class without one, I'll ask you to leave class and come back once you have obtained a mask. 
 
 ## We Can Help You Borrow a Laptop
 
