--- a/content/modules/21-indirect-proofs/prep.qmd
+++ b/content/modules/21-indirect-proofs/prep.qmd
@@ -27,6 +27,7 @@ title: "Cases, Contradictions, and Counterexamples"
 
 - A fraction $\frac{a}{b}$ is in *lowest terms* if there is no integer $k$ that divides both $a$ and $b$. 
 - It is traditional in math classes that you can use anything you have previously proven. You might find a problem from the last warmup to be helpful. 
+- It is also traditional that you may "use without proof" facts that the instructor tells you are acceptable to use without proof. In this case, you may use without proof the fact that, for any integer $n$, it is the case that $n^2$ is even if and only if $n$ is even. 
 
 ### Problem 3
 
