--- a/pages/learning-targets.qmd
+++ b/pages/learning-targets.qmd
@@ -2,7 +2,7 @@
 title: Learning Targets
 ---
 
-[Targets **LS1-3** are introduced on Quiz 1. Targets **PF1**, **PF2**, and **FR1** are introduced on Quiz 2. Targets **CR1-3** are introduced on Quiz 3. Targets **G1**, **P1**, and **P2** are introduced on Quiz 4.]{.aside}
+[Targets **LS1-3** are introduced on Quiz 1. Targets **PF1**, **PF2**, and **R1** are introduced on Quiz 2. Targets **C1**, **C2**, and **FR1** are introduced on Quiz 3. Targets **G1**, **P1**, and **P2** are introduced on Quiz 4.]{.aside}
 
 **Logic and Sets **
 
@@ -15,15 +15,18 @@ title: Learning Targets
 - **PF1**: I can use proof-by-contradiction to prove mathematical statements. 
 - **PF2**: I can choose between weak and strong induction and write correct inductive proofs that include both a base case and an inductive step. 
 
+**Recursion and Recurrence Relations**
+
+- **R1**: I can use recurrence relations to model and analyze simple mathematical processes and algorithms. 
+
+**Counting** 
+
+- **C1**: I can use the principles of addition, multiplication, and inclusion-exclusion to solve counting problems. 
+- **C2**: I can use permutations and combinations to count the number of candidate solutions to a given problem. 
+
 **Functions and Relations**
 
 - **FR1**: I can determine whether or not a given relation is an equivalence relation. 
-
-**Counting and Recursion**
-
-- **CR1**: I can use the principles of addition, multiplication, and inclusion-exclusion to solve counting problems. 
-- **CR2**: I can use permutations and combinations to count the number of candidate solutions to a given problem. 
-- **CR3**: I can prove that a recurrence relation describes a simple algorithm's runtime and use this relation to determine the big-oh asymptotic runtime. 
 
 **Graphs**
 
